# BTerminal

./: .gitignore  Dockerfile  README.md  start.sh
backend_python/: config.py  main.py  main_mod.py  requirements.txt  trading_journal.db
backend_python/analytics/: checker.py  pdf_generator.py
backend_python/bot/: handlers.py  keyboards.py  loader.py
backend_python/database/: db_manager.py
backend_python/engine/: shared_state.py  ws_client.py
engine_rust/: Cargo.toml
engine_rust/src/: main.rs
frontend/: index.html  style.css
