[package]
name = "engine_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
url = "2.5"
reqwest = { version = "0.12", features = ["json"] }

# Оптимизация для релиза (HFT требует скорости)
[profile.release]
lto = true
codegen-units = 1
